ultima fase antes de empezar con el diseño final

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,12 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+
+
+
+.box{
+
+    color: aqua;
+
+}
